<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TencentLocationDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="entries_coord_type">
        <item>WGS84</item>
        <item>GCJ-02</item>
    </string-array>
    <string-array name="entryvalues_coord_type">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="entries_level">
        <item>Geo</item>
        <item>Name</item>
        <item>AdminArea</item>
        <item>Poi</item>
        <item>Global-AdminArea</item>
    </string-array>
    <string-array name="entryvalues_level">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="build">build: %1$s</string>
    <string name="version">version: %1$s</string>
    <string name="key">key: %1$s</string>
    <string name="gps">gps: %1$s</string>
    <string name="wifi">wifi: %1$s %2$s</string>
    <string name="refresh">刷新</string>
    <string name="start_location">开始</string>
    <string name="clear_status">清空</string>
    <string name="stop_location">停止</string>
    <string name="settings">设置</string>
    <string name="my_location">我的位置</string>
    <string name="placeholder"></string>
    <string name="btn_my_loc">定位</string>
    <string name="btn_add">添加</string>
    <string name="btn_del">删除</string>
    <string name="btn_stop">停止测试</string>

</resources>